# ai-dialer

./: .gitignore  .pre-commit-config.yaml  AWS-DEPLOYMENT-GUIDE.md  AWS_SETUP_GUIDE.md  BACKEND_ENDPOINTS_REQUIREMENTS.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_INSTRUCTIONS.md  Dockerfile  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_INTEGRATION_GAP.md  GO_LIVE_CHECKLIST.md  LICENSE  README.md  alembic.ini  amplify.yml  aws-deployment.tf  build-amplify.sh  buildspec.yml  deploy-aws-serverless.ps1  deploy-aws.ps1  deploy-ec2-simple.sh  deploy-frontend.sh  deploy-lambda.sh  deploy-to-aws.sh  docker-compose.dev.yml  docker-compose.yml  env.aws.example  env.example  guided_training_demo.py  implementation-plan.mdc  lambda_handler.py  lambda_handler_minimal.py  local_proxy_server.py  monitor_deployment.py  pyproject.toml  requirements-dev.txt  requirements-lambda.txt  (+14 more)
alembic/: env.py
alembic/versions/: 8e9299eec4ce_add_multi_agent_system_tables.py  add_voicemail_detection_fields.py
amplify_ui/: .env.example  README.md  amplify.yml  deploy-to-amplify.sh  package-lock.json  package.json  quick-deploy.sh
amplify_ui/public/: index.html  manifest.json
amplify_ui/src/: App.css  App.js  index.css
amplify_ui/src/components/: AITrainingView.js  AnalyticsView.js  CallControlPanel.js  ConversationalTrainer.js  CostMonitoringView.js  DashboardView.js  LeadUploadManager.js  RealTimeCallMonitor.js
amplify_ui/src/config/: environment.js
amplify_ui/src/services/: api.js
app/: __init__.py  config.py  database.py  main.py  models.py
app/services/: agent_pool_manager.py  ai_conversation.py  analytics_engine.py  aws_connect_integration.py  aws_connect_media_handler.py  call_orchestration.py  campaign_management.py  campaign_templates.py  claude_service.py  continuous_learning_engine.py  conversational_ai_trainer.py  cost_optimization.py  did_management.py  dnc_scrubbing.py  guided_training.py  media_stream_handler.py  number_pool_manager.py  quality_scoring.py  twilio_integration.py  voicemail_detection.py
app/templates/: admin_dashboard.html
lambda-package/: lambda_handler.py
lambda_packages/alembic-1.16.4.dist-info/: RECORD
lambda_packages/fastapi-0.116.1.dist-info/: RECORD
lambda_packages/mako-1.3.10.dist-info/: RECORD
lambda_packages/uvicorn-0.35.0.dist-info/: RECORD
